Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58529

ProfileDescriptorList does not use correct structure in Qt sources

XMLWordPrintable

    • Android, Linux/X11, macOS, Windows, WinRT
    • dfee9aa22f2dbaae3476770d0ab65f26494fe451 (qt/qtconnectivity/5.12)

      According to the standard ProfileDescriptorList should be a sequence containing sequences with UUID (id) and uint16 (version) in them. At the moment this list is represented as a sequence of UUIDs inside Qt's sources (examples/bluetooth/btchat/chatserver.cpp, src/bluetooth/qbluetoothserver.cpp, src/bluetooth/qbluetoothserver_osx.mm and more).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            owolff Oliver Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes