Fix the BluetoothProfileDescriptorStructure

As per spec this is meant to be a list/sequence within a sequence and
the version was missing too. For simplicity version 1.0 is used.

Fixes: QTBUG-58529
Change-Id: I57090148aadf60ea1fbbb207ff0a4ae61e06caf2
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>